--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class ="logo"> <h1 class ="animate__animated animate__bounce animate__infinite	infinite;"> My India, My Pride</h1></div>
                 <div class ="menu">
                     <a href ="index.html">Home</a>
-                    <a href ="Contact.html">Contact</a>
+                    <a href ="contact.html">Contact</a>
                     <a href ="gallery.html">Gallery</a>
                     <a href ="about.html">About</a>
                      </div>
